@@ -4,7 +4,8 @@
  * Fulcrum on which the scale balances.
  * Labeled with the atom symbol.
  * Origin is at the tip of the fulcrum.
- * Author: Vasily Shakhov (mlearner.com)
+ *
+ * @author Vasily Shakhov (mlearner.com)
  */
 define( function( require ) {
   'use strict';
