@@ -3,9 +3,8 @@
 /**
  * The 'Game' Screen
  *
- * Author: Vasily Shakhov (mlearner.com)
+ * @author Vasily Shakhov (mlearner.com)
  */
-
 define( function( require ) {
   'use strict';
 
